# supervision

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  LICENSE.md  README.md  _headers  llms.txt  mkdocs.yml  pyproject.toml  robots.txt
.github/: CODE_OF_CONDUCT.md  CONTRIBUTING.md  copilot-instructions.md  lychee.toml
.github/workflows/: build-package.yml  ci-build-docs.yml  ci-check-links.yml  ci-tests.yml  publish-docs.yml  publish-release.yml
develop/: 404.html  index.html  objects.inv  sitemap.xml
develop/about/: index.html
develop/assets/: index.html
develop/changelog/: index.html
develop/classification/core/: index.html
develop/code_of_conduct/: index.html
develop/contact/: index.html
develop/contributing/: index.html
develop/cookbooks/: index.html
develop/datasets/core/: index.html
develop/datasets/utils/: index.html
develop/deprecated/: index.html
develop/detection/annotators/: index.html
develop/detection/compact_mask/: index.html
develop/detection/core/: index.html
develop/detection/metrics/: index.html
develop/detection/tools/inference_slicer/: index.html
develop/detection/tools/line_zone/: index.html
develop/detection/tools/polygon_zone/: index.html
develop/detection/tools/save_detections/: index.html
develop/detection/tools/smoother/: index.html
develop/detection/utils/boxes/: index.html
develop/detection/utils/converters/: index.html
develop/detection/utils/iou_and_nms/: index.html
develop/detection/utils/masks/: index.html
develop/faq/: index.html
develop/how_to/benchmark_a_model/: index.html
develop/how_to/count_in_zone/: index.html
develop/how_to/detect_and_annotate/: index.html
develop/how_to/detect_small_objects/: index.html
develop/how_to/filter_detections/: index.html
develop/how_to/process_datasets/: index.html
develop/how_to/save_detections/: index.html
develop/how_to/track_objects/: index.html
develop/javascripts/: pycon_copy.js
develop/keypoint/annotators/: index.html
develop/keypoint/core/: index.html
develop/license/: index.html
develop/metrics/common_values/: index.html
develop/metrics/f1_score/: index.html
develop/metrics/mean_average_precision/: index.html
develop/metrics/mean_average_recall/: index.html
develop/metrics/precision/: index.html
develop/metrics/recall/: index.html
develop/notebooks/annotate-video-with-detections/: index.html
develop/notebooks/compact-mask-sam3/: compact-mask-sam3.ipynb  index.html
develop/notebooks/download-supervision-assets/: index.html
develop/notebooks/evaluating-alignment-of-text-to-image-diffusion-models/: index.html
develop/notebooks/object-tracking/: index.html
develop/notebooks/oriented-bounding-boxes/: index.html
develop/notebooks/serialise-detections-to-csv/: index.html
develop/notebooks/serialise-detections-to-json/: index.html
develop/notebooks/underestand-visitors-with-yolo-world/: index.html
develop/notebooks/zero-shot-object-detection-with-yolo-world/: index.html
develop/search/: search_index.json
develop/theme/: cookbooks.html  main.html
develop/trackers/: index.html
develop/utils/draw/: index.html
develop/utils/file/: index.html
develop/utils/geometry/: index.html
develop/utils/image/: index.html
develop/utils/iterables/: index.html
develop/utils/notebook/: index.html
develop/utils/video/: index.html
docs/: about.md  assets.md  changelog.md  contact.md  cookbooks.md  deprecated.md  faq.md  index.md  llms-100k.txt  llms.full.txt  llms.txt
docs/datasets/: core.md
docs/detection/: annotators.md  compact_mask.md  metrics.md
docs/detection/tools/: inference_slicer.md
docs/detection/utils/: iou_and_nms.md
docs/how_to/: benchmark_a_model.md  count_in_zone.md  detect_and_annotate.md  detect_small_objects.md  filter_detections.md  process_datasets.md  save_detections.md  track_objects.md
docs/metrics/: mean_average_precision.md
docs/notebooks/: oriented-bounding-boxes.ipynb  underestand-visitors-with-yolo-world.ipynb
docs/theme/: cookbooks.html  main.html
examples/compact_mask/: README.md  bench_inference_api.py  benchmark.py
examples/count_people_in_zone/: README.md  inference_example.py  ultralytics_example.py
examples/heatmap_and_track/: README.md  script.py
examples/speed_estimation/: README.md  inference_example.py  ultralytics_example.py  yolo_nas_example.py
examples/time_in_zone/: README.md  inference_stream_example.py  rfdetr_file_example.py  rfdetr_naive_stream_example.py  rfdetr_stream_example.py  ultralytics_stream_example.py
examples/time_in_zone/scripts/: draw_zones.py
examples/tracking/: README.md
examples/traffic_analysis/: README.md  inference_example.py  ultralytics_example.py
notebooks/: convert_to_ipynb.sh  release-demo_0-28.py
src/supervision/: __init__.py  config.py
src/supervision/annotators/: core.py  utils.py
src/supervision/dataset/: core.py  utils.py
src/supervision/detection/: compact_mask.py  core.py  vlm.py
src/supervision/draw/: utils.py
src/supervision/key_points/: annotators.py  core.py
src/supervision/metrics/: detection.py  f1_score.py  mean_average_recall.py  precision.py  recall.py
src/supervision/utils/: conversion.py  file.py  image.py
src/supervision/validators/: __init__.py
tests/: conftest.py
tests/annotators/: test_core.py  test_docs.py
tests/dataset/: test_progress.py
tests/dataset/formats/: test_coco.py  test_createml.py  test_pascal_voc.py  test_yolo.py
tests/detection/: test_compact_mask.py  test_core.py  test_csv.py  test_inference_slicer_compact.py  test_json.py  test_vlm.py
tests/detection/tools/: test_inference_slicer.py  test_inference_slicer_geotiff.py  test_smoother.py
tests/detection/utils/: test_converters.py  test_internal.py  test_iou_and_nms.py
tests/draw/: test_utils.py
tests/key_points/: test_annotators.py  test_core.py
tests/metrics/: test_detection.py  test_f1_score.py  test_mean_average_precision.py  test_mean_average_recall.py  test_oriented_bounding_box_metrics.py  test_precision.py  test_recall.py
tests/utils/: test_file.py  test_image.py
(+15 files in other folders)
